[package]
name = "pretty_rdf"
version = "0.4.0"
authors = ["Phillip Lord"]
repository = "https://github.com/phillord/pretty_rdf"
description = "RDF/XML Pretty Formatting"

edition = "2018"
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.*"
quick-xml = "0.26.0"
rio_api= "0.*"

[dev-dependencies]
pretty_assertions = "1.*"
rio_turtle = "0.*"
