[package]
name = "pretty_rdf"
version = "0.8.0"
authors = ["Phillip Lord"]
repository = "https://github.com/phillord/pretty_rdf"
description = "RDF/XML Pretty Formatting"

edition = "2018"
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.*"
quick-xml = "0.31.0"
rio_api= "0.8.3"

[dev-dependencies]
oxiri="0.2.1"
pretty_assertions = "1.*"
rio_turtle = "0.8.3"
rio_xml="0.8.3"
