[package]
name = "pretty_rdf"
version = "0.9.0"
authors = ["Phillip Lord"]
repository = "https://github.com/phillord/pretty_rdf"
description = "RDF/XML Pretty Formatting"

edition = "2018"
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.*"
quick-xml = "0.31.0"
oxrdf= "0.3.1"
oxrdfio= "0.2.1"

[dev-dependencies]
oxiri="0.2.1"
pretty_assertions = "1.*"
oxrdfio= "0.2.1"
